Change project name and add module type
Updated project name and added module type with dependencies.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-trends-proxy",
+  "name": "trends-proxy",
   "version": "1.0.0",
-  "scripts": {
-    "start": "node api/trends.js"
+  "type": "module",
+  "dependencies": {
+    "node-fetch": "^3.3.2"
   }
 }
