--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "functions": {
-    "api/*.py": {
-      "runtime": "python3.9"
+  "builds": [
+    {
+      "src": "api/trends.py",
+      "use": "@vercel/python"
     }
-  }
+  ]
 }
