Update Vercel configuration for Python functions

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "builds": [
-    {
-      "src": "api/trends.py",
-      "use": "@vercel/python"
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
     }
-  ]
+  }
 }
